--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: My Portfolio
+name: Portfolio
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: The good, the bad and the ugly
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: evylseme.github.io/images/bg1_grey.jpg
+avatar: 
 #
 # Flags below are optional
 #
