--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Portfolio
+name: My Portfolio
 
 # Short bio or description (displayed in the header)
-description: 
+description: The good, the bad and heaps of magic!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
