--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar:
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: EvylSeme
   flickr:
   github: evylseme/evylseme.github.io
   instagram:
